<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPlus"
        app:layout_constraintStart_toStartOf="@+id/imageViewMinus"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewDelete"
        android:layout_width="35dp"

        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_delete"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="@+id/textViewName"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <ImageView
        android:id="@+id/imageViewMinus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_minus"
        android:src="@drawable/ic_minus"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPlus"
        app:layout_constraintTop_toBottomOf="@+id/textViewAmount" />

    <ImageView
        android:id="@+id/imageViewPlus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_plus"
        android:src="@drawable/ic_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>